--- a/index.html
+++ b/index.html
@@ -1,12 +1,25 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>HTML Playground</title>
-</head>
-<body>
+  </head>
+  <body>
+    <h1>Este é o nosso HTML Playground</h1>
 
-</body>
+    <h2>este e um subtitulo</h2>
+
+    <h3>Este é um sub sub titulo</h3>
+    <p>
+      Este é um paragrafo para ilustrar a funcionalidade da tag p dentro do
+      html]
+    </p>
+    <h2>este e um subtitulo</h2>
+    <p>
+      Este é um paragrafo usando outra tag p. Ou melhor, outro elemento p, que
+      significa paragrafo
+    </p>
+  </body>
 </html>
