aprendemos listas e links

--- a/index.html
+++ b/index.html
@@ -21,5 +21,25 @@
       Este é um paragrafo usando outra tag p. Ou melhor, outro elemento p, que
       significa paragrafo
     </p>
+    <h3>Filmes Legais</h3>
+    <ul>
+        <li>vingadores ultimato </li>
+        <li>um sonho de liberdade</li>
+        
+    </ul>
+    <h3>Receita de Bolo de Cenoura </h3>
+    <ol>
+        <li>quebre os ovos </li>
+        <li>junte com a Cenoura</li>
+        <li>coloque cobertura de chocolate</li>
+    </ol>
+
+    <a href="https://www.google.com" target="blank">Google</a>
+    <p>
+        <a href="/contato.html">Contato</a>
+    </p>
+    <p>
+    <a href="/outras_paginas/pagina_secreta.html">Pagina secreta</a> 
+    </p>
   </body>
 </html>
