explicado tags strong em, b, q, blockquote, cite, marquee

--- a/index.html
+++ b/index.html
@@ -50,6 +50,16 @@
 
 <img src="/images/gato.jpg" alt="outro gato">
 
+<p>
+  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus semper leo a urna lobortis, vitae suscipit nisl <strong>sagittis.</strong> Sed sit amet purus eu neque tempus <em>consectetur in in odio.</em>  Nulla imperdiet scelerisque pulvinar. <b>Donec lobortis</b> erat vitae libero commodo, quis ultrices justo pretium. <q>In pretium</q> erat vitae ornare dictum. Mauris metus ante, efficitur ac sapien scelerisque, ultrices interdum arcu. Sed eget dapibus risus. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Vestibulum et metus auctor, auctor augue ac, feugiat tellus. Vivamus elementum vulputate gravida. <blockquote>Alguma coisa</blockquote> vehicula odio vitae orci scelerisque, ac lacinia diam consequat.
+
+</p>
+<blockquote>
+
+Saber e não fazer, é ainda não saber!
+<cite>Lao Tse</cite>
+</blockquote>
+<marquee>Este texto vai rodar</marquee>
 
 
 
