explicado div e span

--- a/index.html
+++ b/index.html
@@ -61,6 +61,18 @@ Saber e não fazer, é ainda não saber!
 </blockquote>
 <marquee>Este texto vai rodar</marquee>
 
+<div>
+  Fusce eu diam tempus, egestas tortor at, tristique augue. In bibendum, enim nec blandit feugiat, nunc ante consectetur tellus, et bibendum mi massa at nunc. Suspendisse tortor metus, luctus iaculis cursus id, malesuada sit amet ex. Cras eget scelerisque mi. Nulla facilisi. Mauris sollicitudin purus et arcu sollicitudin dignissim porta et ipsum. Aliquam aliquam mattis arcu, quis ullamcorper sapien. Aliquam erat volutpat. Donec pellentesque nisi ac nisl porta, in interdum odio venenatis. Vivamus non enim sed velit viverra rhoncus nec et dui. Phasellus rhoncus ornare lacus. Nunc egestas quam purus, et faucibus sem consectetur ac.
+</div>
+
+<div>
+  uma <span>palavra</span>
+</div>
+
+<div
+>outras
+</div>
+
 
 
 
