explicado tags com semantica

--- a/index.html
+++ b/index.html
@@ -74,6 +74,28 @@ Saber e não fazer, é ainda não saber!
 </div>
 
 
+<section>
+  Essa é uma seçao do meu site
+</section>
+
+<article>
+  este de um artigo de um jornal ou blog
+</article>
+
+<header>
+  essa tag normalmente vai no topo
+</header>
+
+<nav>
+ <ul>
+   <li> sobre </li>
+   <li>contato </li>
+</ul> 
+</nav>
+
+<footer>
+  este vai ser o rodapé da sua pagina
+</footer>
 
 
   </body>
