reaprendendo sobre tabelas

--- a/index.html
+++ b/index.html
@@ -97,6 +97,28 @@ Saber e não fazer, é ainda não saber!
   este vai ser o rodapé da sua pagina
 </footer>
 
+<table style="border lpx solid">
+  <tr>
+    <th>Produto</th>
+      <th>Descriçao</th>
+      <th>Preço</th>
+  </tr>
+  <tr>
+    <td>Banana</td>
+    <td>Uma fruta amarela</td>
+    <td>10,00/kg</td>
+  
+  </tr>
+  <tr>
+    <td>Banana</td>
+    <td>Uma fruta amarela</td>
+    <td>10,00/kg</td>
+  
+  </tr>
+  
+</table>
+
+
 
   </body>
   
